--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,6 @@ db:
     - MONGO_INITDB_ROOT_USERNAME=root
     - MONGO_INITDB_ROOT_PASSWORD=pass
   volumes:
-    - ./init-db.js:/docker-entrypoint-initdb.d/init-db.js:ro
+    - ./init-db.js:/docker-entrypoint-initdb.d/init-db.js
   ports:
     - 27017:27017
